methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:4: error: not found: value poseBrosse
    poseBrosse() ; leveBrosse()
    ^